<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QikPic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="prompt_password">qikpic password</string>
    <string name="prompt_username">email</string>
    <string name="error_intro">error intro</string>
    <string name="error_blank_username">blank username</string>
    <string name="error_valid_email">please enter a valid email</string>
    <string name="error_join">error join</string>
    <string name="error_blank_password">blank password</string>
    <string name="error_end">error end</string>
    <string name="progress_login">progress login</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup">Signup</string>
    <string name="prompt_password_again">qikpic password</string>
    <string name="progress_signup">progress sign up</string>
    <string name="error_mismatched_passwords">mismatch password</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="caption">QikPic</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_detail">Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_save">save</string>
    <string name="title_activity_tag_search">TagSearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">tag</string>
    <string name="menu_search">search</string>
    <string name="qikpik_name_count">QikPics</string>
    <string name="active_pane">ACTIVE_PANE</string>
    <string name="active_pane_default">0</string>
    <string name="no_qikpics">No QikPics Yet</string>
    <string name="action_tag">action_tag</string>

</resources>
